raffia/tests/error/scss/at-rule/forward/as-no-asterisk.snap
---
source: raffia/tests/error.rs
---
error: expect token `*`, but found `;`
  ┌─ as-no-asterisk.scss:1:20
  │
1 │ @forward "a" as foo;
  │                    ^


